feat: add file name occurrence in result table as a column in UI