@@ -3,26 +3,33 @@ package pl.wiktorszczeszek.ui.controllers;
 import pl.wiktorszczeszek.core.domain.PdfFile;
 import pl.wiktorszczeszek.core.domain.SearchContext;
 import pl.wiktorszczeszek.core.domain.SearchPhrase;
+import pl.wiktorszczeszek.core.domain.results.FileNameSearch;
 import pl.wiktorszczeszek.core.domain.results.TextContentSearch;
 import pl.wiktorszczeszek.core.services.fileLocators.LocalFileLocator;
 import pl.wiktorszczeszek.core.services.fileReaders.TotalTextReader;
-import pl.wiktorszczeszek.core.services.searchers.PhraseCountSearcher;
+import pl.wiktorszczeszek.core.services.searchers.PhraseTextSearcher;
+import pl.wiktorszczeszek.ui.models.SearchResultRow;
 import pl.wiktorszczeszek.ui.views.MainFrame;
 
-import javax.swing.*;
+import javax.swing.SwingWorker;
+import javax.swing.JFileChooser;
+import javax.swing.JOptionPane;
 import java.io.File;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 public class MainController {
-    private LocalFileLocator fileService;
-    private TotalTextReader readerService;
-    private PhraseCountSearcher searchService;
-    private SearchContext searchContext;
-    private MainFrame mainFrame;
+    private final LocalFileLocator fileService;
+    private final TotalTextReader readerService;
+    private final PhraseTextSearcher searchService;
+    private final SearchContext searchContext;
+    private final MainFrame mainFrame;
     private SwingWorker<Void, Integer> searchWorker;
 
-    public MainController(LocalFileLocator fileService, TotalTextReader readerService, PhraseCountSearcher searchService) {
+    public MainController(LocalFileLocator fileService, TotalTextReader readerService, PhraseTextSearcher searchService) {
         this.fileService = fileService;
         this.readerService = readerService;
         this.searchService = searchService;
@@ -114,15 +121,18 @@ public class MainController {
         try {
             searchWorker = new SwingWorker<>() {
                 @Override
-                protected Void doInBackground() throws Exception {
+                protected Void doInBackground() {
                     searchService.setSearchPhrase(phrase);
                     for (int i = 0; i < files.size(); i++) {
                         if (isCancelled()) break;
                         PdfFile file = files.get(i);
+                        boolean fileNameOccurrence = searchService.isExist(file.getName());
+                        FileNameSearch fileNameSearch = new FileNameSearch(file, phrase, fileNameOccurrence);
+                        searchContext.updateFileNameResult(fileNameSearch);
                         String text = readerService.allText(file);
-                        int occurrence = searchService.search(text);
-                        TextContentSearch result = new TextContentSearch(file, phrase, occurrence);
-                        searchContext.updateTextContentResult(result);
+                        int textOccurrence = searchService.search(text);
+                        TextContentSearch textSearch = new TextContentSearch(file, phrase, textOccurrence);
+                        searchContext.updateTextContentResult(textSearch);
                         publish(i + 1);
                     }
                     return null;
@@ -136,10 +146,25 @@ public class MainController {
 
                 @Override
                 protected void done() {
-                    List<TextContentSearch> results = searchContext.getTextContentResults()
-                            .stream()
-                            .filter(result -> result.getOccurrenceCount() > 0)
-                            .collect(Collectors.toList());
+                    List<FileNameSearch> fileNameResults = searchContext
+                            .getFileNameResults().stream().toList();
+                    List<TextContentSearch> textContentResults = searchContext
+                            .getTextContentResults().stream().toList();
+
+                    List<SearchResultRow> results = new ArrayList<>();
+
+                    for (int i = 0; i < fileNameResults.size(); i++) {
+                        FileNameSearch fileNameSearch = fileNameResults.get(i);
+                        TextContentSearch textContentSearch = textContentResults.get(i);
+                        SearchResultRow row =  new SearchResultRow(
+                                fileNameSearch.getFile().path(),
+                                fileNameSearch.getIsOccurrence(),
+                                textContentSearch.getOccurrenceCount());
+
+                        if (row.isFileNameOccurrence() || row.textOccurrenceCount() > 0)
+                            results.add(row);
+                    }
+
                     mainFrame.setResults(results);
                     mainFrame.setSearchButtonToSearch();
                 }
